[package]
name = "temperature"
version = "0.7.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/temperature"
homepage = "https://github.com/markov-chain/temperature"
documentation = "https://markov-chain.github.io/temperature"
description = "The package provides a temperature simulator."
keywords = ["simulation", "temperature"]

[features]
default = ["hotspot", "threed-ice"]

[dependencies]
matrix = "*"

[dependencies.hotspot]
version = "0.5"
optional = true

[dependencies.threed-ice]
version = "0.10"
optional = true

[dev-dependencies]
assert = "*"
random = "*"

[[bench]]
name = "temperature"
path = "benches/lib.rs"
