[package]
name = "temperature"
version = "0.9.2"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/temperature"
homepage = "https://github.com/markov-chain/temperature"
documentation = "https://markov-chain.github.io/temperature"
description = "The package provides a temperature simulator."
keywords = ["simulation", "temperature"]

[features]
default = ["hotspot", "threed-ice"]

[dependencies]
matrix = "0.21"

[dependencies.hotspot]
version = "0.5"
optional = true

[dependencies.threed-ice]
version = "0.11"
optional = true

[dev-dependencies]
assert = "0.6"
random = "0.9"

[[bench]]
name = "temperature"
path = "benches/lib.rs"
